- Fixed Hibernate dialect to replace IN lists with OR, preventing transformation exceptions. - Applied additional general code improvements to reduce warnings.